<resources>
    <string name="app_name">EyeCare</string>
    <string name="loginimage">LoginImage</string>
    <string name="eyecare">EyeCare</string>
    <string name="loginDesc">Check your eye disease with AI</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registerAcc">Register?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="registerDesc">Create new account</string>
    <string name="registerimage">registerImage</string>
    <string name="tagline">Your personal eye health companion</string>
    <string name="logo">Logo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="analyze">Analyze</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Format">Invalid Email Format</string>
    <string name="Taken">Email is Taken</string>
    <string name="Empty">This Field Should not be empty</string>
    <string name="category">Glaucoma:</string>
    <string name="percentage"> 87%</string>
    <string name="diagnosis">An increase in pressure within your eye can lead to damage to the optic nerve at the back of your eye. When this occurs it is called glaucoma. Glaucoma can lead to a loss of vision if it is not treated.</string>
    <string name="treatment">Prescription eye drops can lower the pressure in your eye and prevent damage to your optic nerve. To lower your eye pressure, doctors can use lasers to help the fluid drain out of your eye. If medicines and laser treatment don’t work, there are several different types of surgery that can help the fluid drain out of your eye.</string>
    <string name="food">Fruits, Leaf Vegetables, Nuts, Fish, Dark Chocolate, Hot Tea, Banana, Avocado</string>
    <string name="vitamins">"Magnesium, Homotaurine, Carnosine, Forskolin, Folic Acid, Vitamin B1, Vitamin B2, Vitamin B6"</string>
    <string-array name="dummy_img">
        <item>@drawable/gluco</item>
    </string-array>
    <string-array name="dummy_category">
        <item>Glaucoma</item>
    </string-array>
    <string-array name="dummy_percentage">
        <item>87%</item>
    </string-array>
    <string name="first">Eye Safety First</string>
    <string name="first_content">As one of the senses we have, we must take care of our eyes condition</string>
    <string name="second">Care Your Eyes</string>
    <string name="second_content">Caring for your eyes should be Taken Seriously</string>
    <string name="third">Check Your Eyesight</string>
    <string name="third_content">If Problems on your eyes arises, please consult to your ophthalmologist, before getting serious</string>
    <string name="fourth">Welcome To EyeCare</string>
    <string name="fourth_content">Before Using Our services Please Login Into Your Account first</string>
    <string-array name="data_disease">
        <item>Crossed Eyes</item>
        <item>Uveitis Condition</item>
        <item>Cataract</item>
        <item>Bulging Eyes</item>
        <item>Glaucoma</item>
    </string-array>
</resources>